[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Art/Interface/fonte/press_start_2p/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scripts/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Interface/P8.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Interface/fundo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Interface/p1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Interface/p6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Interface/logo.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Interface/p4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/Interface/info.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/Interface/ciabranco.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.403922, 0.0313726, 0.0313726, 1 )

[sub_resource type="DynamicFont" id=16]

[sub_resource type="Theme" id=17]
default_font = SubResource( 16 )
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 0 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 0 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 0 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 0 )
Button/constants/hseparation = 2
Button/styles/disabled = SubResource( 11 )
Button/styles/focus = SubResource( 12 )
Button/styles/hover = SubResource( 13 )
Button/styles/normal = SubResource( 14 )
Button/styles/pressed = SubResource( 15 )

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_top = 13
extra_spacing_bottom = 13
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.886275, 0.0745098, 0.0745098, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.282353, 0.317647, 0.443137, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 0 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 0 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 0 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 0 )
Button/styles/disabled = SubResource( 19 )
Button/styles/focus = SubResource( 20 )
Button/styles/hover = SubResource( 21 )
Button/styles/normal = SubResource( 22 )
Button/styles/pressed = SubResource( 23 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.282353, 0.317647, 0.443137, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=29]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 0 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 0 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 0 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 0 )
Button/styles/disabled = SubResource( 24 )
Button/styles/focus = SubResource( 25 )
Button/styles/hover = SubResource( 26 )
Button/styles/normal = SubResource( 27 )
Button/styles/pressed = SubResource( 28 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 160, 90 )
scale = Vector2( 8.41903, 7.28 )
texture = ExtResource( 4 )

[node name="casa1" type="Sprite" parent="Fundo"]
position = Vector2( -11.9966, -6.04396 )
scale = Vector2( 0.030303, 0.0318799 )
texture = ExtResource( 5 )

[node name="casa2" type="Sprite" parent="Fundo"]
position = Vector2( -12.2342, 5.90659 )
scale = Vector2( 0.0279821, 0.0342018 )
texture = ExtResource( 8 )

[node name="casa3" type="Sprite" parent="Fundo"]
position = Vector2( 11.5215, -6.04396 )
scale = Vector2( 0.0311202, 0.0356082 )
texture = ExtResource( 6 )

[node name="casa4" type="Sprite" parent="Fundo"]
position = Vector2( 10.9276, 5.76929 )
scale = Vector2( 0.0281834, 0.0299683 )
texture = ExtResource( 3 )

[node name="menu" type="Sprite" parent="Fundo"]
position = Vector2( 0.333754, -0.206044 )
scale = Vector2( 0.0197646, 0.0191475 )
texture = ExtResource( 9 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 175, 40 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="logocia" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.141176, 0.156863, 1 )
position = Vector2( 158, 148 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 10 )

[node name="VBoxContainer (start)" type="VBoxContainer" parent="."]
margin_left = 139.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 180.0
rect_scale = Vector2( 0.423, 0.423 )

[node name="Button(start)" type="Button" parent="VBoxContainer (start)"]
margin_right = 121.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../Button(exit)")
size_flags_vertical = 15
theme = SubResource( 17 )
custom_colors/font_color_focus = Color( 0.0705882, 0.345098, 0.611765, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.345098, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 0.647059, 0.133333, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Iniciar"

[node name="Button(controls)" type="Button" parent="VBoxContainer (start)"]
margin_top = 40.0
margin_right = 121.0
margin_bottom = 76.0
theme = SubResource( 18 )
custom_colors/font_color_focus = Color( 0.0705882, 0.345098, 0.611765, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.345098, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 0.647059, 0.133333, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Controles"

[node name="Button(exit)" type="Button" parent="VBoxContainer (start)"]
margin_top = 80.0
margin_right = 121.0
margin_bottom = 116.0
focus_neighbour_bottom = NodePath("../Button(start)")
theme = SubResource( 29 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.0705882, 0.345098, 0.611765, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.345098, 0.611765, 1 )
custom_colors/font_color_pressed = Color( 0.647059, 0.133333, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Sair"

[connection signal="pressed" from="VBoxContainer (start)/Button(start)" to="." method="_on_Buttonstart_pressed"]
[connection signal="pressed" from="VBoxContainer (start)/Button(controls)" to="." method="_on_Buttoncontrols_pressed"]
[connection signal="pressed" from="VBoxContainer (start)/Button(exit)" to="." method="_on_Buttonexit_pressed"]
